--- a/app/views/messages/index.erb
+++ b/app/views/messages/index.erb
@@ -1,5 +1,7 @@
 <h1>Home Page</h1>
 
+<a href="/messages/news">Post a message...Its free (for now!)</a>
+
 <% @messages.each do |message| %>
   <div class="message">
     <h3><%=message.title%> <small>(by: <%= message.author%>)</small></h3>
@@ -8,3 +10,4 @@
     </p>
   </div>
 <%end%>      
+
