Submitting the message. The post action

--- a/app/views/messages/index.erb
+++ b/app/views/messages/index.erb
@@ -1,6 +1,6 @@
 <h1>Home Page</h1>
 
-<a href="/messages/news">Post a message...Its free (for now!)</a>
+<a href="/messages/new">Post a message...Its free (for now!)</a>
 
 <% @messages.each do |message| %>
   <div class="message">
