--- a/app/views/messages/new.erb
+++ b/app/views/messages/new.erb
@@ -1,16 +1,20 @@
-<form>
+<h1>Submit a Message</h1>
+
+<hr/>
+
+<form method="post" action="/messages">
   <div>
-    <label>Author:<label>
+    <label>Author:</label>
     <input type="text" name="author">
   </div>
 
   <div>
-    <label>Subject:<label>
+    <label>Title:</label>
     <input type="text" name="title">
   </div>
 
   <div>
-    <label>Content:<label>
+    <label>Content:</label>
     <input type="text" name="content">
   </div>
 
@@ -19,3 +23,4 @@
   </div>
 
 </form>
+
