--- a/app/views/messages/new.erb
+++ b/app/views/messages/new.erb
@@ -1,21 +1,32 @@
 <h1>Submit a Message</h1>
 
+<% if @message && @message.errors.any? %>
+  <div>
+    <strong>Some issues with your message, please fix this: </strong>
+    <ul>
+      <% @message.errors.full_messages.each do |message| %>
+        <li><% message %></li>
+      <% end %>  
+    </ul>
+  </div>  
+<% end %>
 <hr/>
 
 <form method="post" action="/messages">
   <div>
     <label>Author:</label>
-    <input type="text" name="author">
+    <input type="text" name="author" value="<%=@message && @message.author %>">
   </div>
+
 
   <div>
     <label>Title:</label>
-    <input type="text" name="title">
+    <input type="text" name="title" value="<%=@message && @message.title %>">
   </div>
 
   <div>
     <label>Content:</label>
-    <input type="text" name="content">
+    <input type="text" name="content" value="<%=@message && @message.content %>">
   </div>
 
   <div>
