--- a/app/views/messages/new.erb
+++ b/app/views/messages/new.erb
@@ -18,15 +18,14 @@
     <input type="text" name="author" value="<%=@message && @message.author %>">
   </div>
 
-
-  <div>
-    <label>Title:</label>
-    <input type="text" name="title" value="<%=@message && @message.title %>">
-  </div>
-
   <div>
     <label>Content:</label>
     <input type="text" name="content" value="<%=@message && @message.content %>">
+  </div>
+
+  <div>
+    <label>URL:</label>
+    <input type="url" name="homepage" value="<%=@message && @message.title %>">
   </div>
 
   <div>
