--- a/app/views/messages/show.erb
+++ b/app/views/messages/show.erb
@@ -1,10 +1,18 @@
-<h1><%= @message.title %></h1>
+<!-- <h1><%= @message.title %></h1> -->
 
 <p>
   Author: <%= @message.author %>
 </p>
-  <%= @message.content %>
+
 <p>
+  <%= @message.content %>
+</p>
+
+<p>
+  <%= @message.created_at %>
+</p>
+
+
 
 <hr/>
 
